# wally

./: .gitignore  ADD_CASHU_FOR_REAL_PLAN.md  LICENSE  REACT_REWRITE_PLAN.md  README.md  SPECIFICATION.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test-nwc-connection.sh  vite.config.ts
.github/workflows/: build.yml
docs/: rust-backend-design.md
src/: App.tsx  app.html  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  desktop.json
src-tauri/src/: connection_server.rs  desktop.rs  lib.rs  nostr_providers.rs  npub_server.rs  nwc.rs  nwc_storage.rs  relay.rs  routstr.rs  wallet.rs
src-tauri/src/proxy/: gateway.rs  mod.rs  onion.rs  proxy.rs
src-tauri/src/tollgate/: errors.rs  mod.rs  network.rs  protocol.rs  service.rs  session.rs  wallet.rs
src/components/: copy-button.tsx
src/components/budget/: budget-controls.tsx  budget-usage.tsx  index.ts
src/components/layout/: screen.tsx  section-header.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx  switch.tsx  textarea.tsx
src/components/wallet/: +page.svelte
src/lib/: nostr-providers.ts
src/lib/os/: AndroidOperatingSystem.ts  IOperatingSystem.ts  MacOsOperatingSystem.ts
src/lib/routstr/: api.ts  types.ts
src/lib/tollgate/: ConnectionStatus.ts  helpers.ts  types.ts  use-network-debug-info.ts  utils.ts
src/lib/tollgate/modules/: merchant.ts
src/lib/tollgate/network/: NetworkState.ts  TollgateNetworkSession.ts  TollgateSession.ts  TollgateSessionState.ts  TollgateState.ts  helpers.ts  pluginCommands.ts
src/lib/tollgate/purchase/: renameme.ts
src/lib/tollgate/types/: ConnectedNetworkInfo.ts  ConnectionStatus.ts  NetworkElement.ts  NetworkInfo.ts  Tollgate.ts  TollgatePricing.ts
src/lib/util/: cashu.ts  helpers.ts  nostr.ts
src/lib/wallet/: api.ts  cashRegister.ts  utils.ts  wallet.ts
src/routes/: +layout.svelte  +page.svelte  connections-screen.tsx  debug-screen.tsx  history-screen.tsx  home-screen.tsx  receive-screen.tsx  routstr-screen.tsx  send-screen.tsx  settings-screen.tsx  types.ts
src/routes/developer/: +page.svelte
src/styles/: theme.css
tauri-plugin-androidwifi/: Cargo.toml  build.rs
tauri-plugin-androidwifi/android/: build.gradle.kts
tauri-plugin-androidwifi/android/src/main/: AndroidManifest.xml
tauri-plugin-androidwifi/android/src/main/java/: WifiDetails.kt  WifiPlugin.kt
tauri-plugin-androidwifi/permissions/: default.toml
tauri-plugin-androidwifi/permissions/autogenerated/: reference.md
tauri-plugin-androidwifi/permissions/autogenerated/commands/: connect_wifi.toml  detect_tollgate.toml  getWifiDetails.toml  get_current_wifi_details.toml  get_gateway_ip.toml  get_mac_address.toml  get_network_status.toml  get_wifi_details.toml  mark_captive_portal_dismissed.toml
tauri-plugin-androidwifi/permissions/schemas/: schema.json
tauri-plugin-androidwifi/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  tollgate.rs
