[package]
name = "tollgate-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tollgate_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-androidwifi = { path = "../tauri-plugin-androidwifi" }
tauri-plugin-log = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
log = "0.4.22"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
nostr = { version = "0.35", default-features = false, features = ["std"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
cdk = { git = "https://github.com/cashubtc/cdk.git", rev = "e3fb7f9444179b41ad360885aca6864ea4da7be4", default-features = false, features = ["wallet", "mint"] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-sharetarget = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
