[package]
name = "wally"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tollgate_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-androidwifi = { path = "../tauri-plugin-androidwifi" }
tauri-plugin-log = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
log = "0.4.22"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
tower = "0.4"
nostr = { version = "0.35", default-features = false, features = ["std"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
bip39 = { version = "2", default-features = false, features = ["std", "rand"] }
directories = "5"
sha2 = "0.10"
cdk = { git = "https://github.com/cashubtc/cdk.git", rev = "f3235440409190338d81dddc85e22e9d2967c80e", default-features = false, features = ["wallet", "mint"] }
cdk-sqlite = { git = "https://github.com/cashubtc/cdk.git", rev = "f3235440409190338d81dddc85e22e9d2967c80e", default-features = false, features = ["wallet"] }
# Force std-enabled error types required by cdk's new thiserror usage
bitcoin_hashes = { version = "0.13", features = ["std"], default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-sharetarget = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
cocoa = "0.26.0"
objc = "0.2.7"
