[package]
name = "tauri-plugin-androidwifi"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-androidwifi"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
wifiscanner = "0.5.*"
wifi-rs = "0.2.4"
mac_address = "1.1.7"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
